--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
     <head>
         <title>Eymen's Minecraft Website</title>
     </head>
+    <body>
+        <h1>Eymen's</h1>
+        <h1>Website</h1>
+    </body>
 </html>
