--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Eymen's</h1>
+        <img src="/assets/oldmclogo.jpeg">
         <h1>Website</h1>
     </body>
 </html>
