--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <title>Eymen's Minecraft Website</title>
     </head>
     <body>
+        <table>
+            <tr>
+                <td><h2>Home</h2></td>
+                <td><h2>Games</h2></td>
+                <td><h2>Downloads</h2></td>
+            </tr>
+        </table>
         <h1>Eymen's</h1>
         <img src="/assets/oldmclogo.jpeg">
         <h1>Website</h1>
