--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Eymen's Minecraft Website</title>
     </head>
     <body>
-        <table>
+        <table border="2">
             <tr>
                 <td><h2>Home</h2></td>
                 <td><h2>Games</h2></td>
@@ -12,7 +12,8 @@
             </tr>
         </table>
         <h1>Eymen's</h1>
-        <img src="/assets/oldmclogo.jpeg">
-        <h1>Website</h1>
+        <img src="/assets/oldmclogo.jpeg" width="1000" height="500">
+        <h1>Website</h1><br><hr />
+        <h2><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
     </body>
 </html>
