--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html>
     <head>
         <title>Eymen's Minecraft Website</title>
+        <style>
+            .merkez { text-align: center; }
+        </style>
     </head>
     <body>
-        <table border="2">
+        <table border="2" class="merkez">
             <tr>
                 <td><h2>Home</h2></td>
                 <td><h2>Games</h2></td>
                 <td><h2>Downloads</h2></td>
+                <td></td>
             </tr>
         </table>
         <h1>Eymen's</h1>
         <img src="/assets/oldmclogo.jpeg" width="650" height="325">
-        <h1>Website</h1><br><hr />
+        <h1>               Website</h1><br><hr />
         <h2><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
     </body>
 </html>
