--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
     <head>
         <title>Eymen's Minecraft Website</title>
         <style>
+            body { margin: 0; overflow: hidden; }
+            body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, #00f, #0f0, #f00, #00f);
+            background-size: 400% 400%;
+            animation: gradientAnimation 10s ease infinite;
+}
             .merkez { text-align: center; }
         </style>
     </head>
