--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <title>Eymen's Minecraft Website</title>
         <style>
-}
+            hr { width: 3;}
             .merkez { text-align: center; }
         </style>
     </head>
     <body>
+        <div class="banner">
         <table border="2" class="merkez">
             <tr>
                 <td><h2>Home</h2></td>
@@ -20,5 +21,6 @@
         <img src="/assets/oldmclogo.jpeg" width="650" height="325">
         <h1>               Website</h1><br><hr />
         <h2><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
+        </div>
     </body>
 </html>
