--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <img src="/assets/oldmclogo.jpeg" width="650" height="325">
         <h1>               Website</h1><br><hr />
         <h2><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
+        <p>You can find stuff about minecraft and old minecraft!<br>
+        Also games and tech, hand-made or other.</p>
         </div>
     </body>
 </html>
