landscape town photo updated

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <style>
             hr { width: 3; }
             .merkez { text-align: center; }
+            .banner { background-image: url('/assets/ltown.png')}
         </style>
     </head>
     <body>
