--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="banner">
         <table border="2" class="merkez">
             <tr>
-                <td><h2>Home</h2></td>
-                <td><h2>Games</h2></td>
-                <td><h2>Downloads</h2></td>
+                <td><h2><a href="/">Home</a></h2></td>
+                <td><h2><a href="/downloads/">Downloads</a></h2></td>
+                <td><h2><a href="/games/">Games</a></h2></td>
                 <td></td>
             </tr>
         </table>
