--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <style>
             hr { width: 3; }
             .merkez { text-align: center; }
-            .banner { background-image: url('/assets/ltown.png')}
+            .banner { background-image: url('/assets/ltown.png'); }
+            .beyaz { color: white; }
         </style>
     </head>
     <body>
