--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Eymen's Minecraft Website</title>
         <style>
             hr { width: 3; }
+            table { margin: 0 auto; }
             .merkez { text-align: center; }
             .banner { background-image: url('/assets/ltown.png'); }
             .beyaz { color: white; }
