--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <td><h2><a href="/">Home</a></h2></td>
                 <td><h2><a href="/downloads/">Downloads</a></h2></td>
                 <td><h2><a href="/games/">Games</a></h2></td>
-                <td><h2><a href="ltown.html"></a>Landscape Town (BetaWorld Server Minecraft)</h2></td>
+                <td><h2><a href="ltown.html">Landscape Town (BetaWorld Server Minecraft)</a></h2></td>
             </tr>
         </table>
         <h1>Eymen's</h1>
