--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             .banner { background-image: url('/assets/ltown.png'); }
             .beyaz { color: white; }
             .dev { font-size: 100px; }
+            .buyuk { font-size: 65px; }
         </style>
     </head>
     <body>
@@ -26,7 +27,7 @@
         <img src="/assets/oldmclogo.jpeg" width="650" height="325">
         <h1>               Website</h1><br><hr />
         </div>
-        <h2 class="dev"><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
+        <h2 class="buyuk"><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
         <p>You can find stuff about minecraft and old minecraft!<br>
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
