--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
     <head>
         <title>Eymen's Minecraft Website</title>
         <style>
+            body {
+            margin: 0;
+            padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+#content {
+  /* Sayfa içeriğine ait stil özellikleri */
+  padding: 20px;
+}
+
+#footer {
+  /* Footer'a ait stil özellikleri */
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
             hr { width: 3; }
             table { margin: 0 auto; }
             .merkez { text-align: center; }
