--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
             body {
             margin: 0;
             padding: 0;
-  font-family: Arial, sans-serif;
-}
+            font-family: Arial, sans-serif;
+            }
 
-#content {
-  /* Sayfa içeriğine ait stil özellikleri */
-  padding: 20px;
-}
+            #content {
+            /* Sayfa içeriğine ait stil özellikleri */
+            padding: 20px;
+            }
 
-#footer {
-  /* Footer'a ait stil özellikleri */
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 10px;
+            #footer {
+            /* Footer'a ait stil özellikleri */
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
 }
             hr { width: 3; }
             table { margin: 0 auto; }
@@ -54,5 +54,6 @@
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
         <a id="visitorCount"><h3></h3></a>
+        <footer id="footer"><h3>CopyRight &trade; Eymen's Website | 100% of code by EymenWinnerYT</h3></footer>
     </body>
 </html>
