--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
         <a id="visitorCount"><h3></h3></a>
-        <footer id="footer"><h3>CopyRight &trade; <font color="blue">Eymen's Website</font> | 100% of code by EymenWinnerYT</h3></footer>
+        <h3 id="footer">CopyRight &trade; <font color="blue">Eymen's Website</font> | 100% of code by EymenWinnerYT</h3>
     </body>
 </html>
