--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
                 <td><h2><a href="/">Home</a></h2></td>
                 <td><h2><a href="/downloads/">Downloads</a></h2></td>
                 <td><h2><a href="/games/">Games</a></h2></td>
-                <td><h2><a href="ltown.html">Landscape Town (BetaWorld Server Minecraft)</a></h2></td>
             </tr>
         </table>
         <h1>Eymen's</h1>
-        <img src="/assets/oldmclogo.jpeg" width="650" height="325">
+        <img src="/assets/oldmclogo.jpeg" width="450" height="225">
         <h1>               Website</h1><br><hr />
         </div>
         <h2 class="buyuk"><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
@@ -49,6 +48,6 @@
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
         <a id="visitorCount"><h3></h3></a>
-        <h3 id="footer ">CopyRight &trade; <font color="blue">Eymen's Website</font> | 100% of code by EymenWinnerYT</h3>
+        <h3 id="footer ">CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 100% of code by EymenWinnerYT</h3>
     </body>
 </html>
