--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
         <a id="visitorCount"><h3></h3></a>
+        <h1>About Landscape Town</h1>
+        <p>Landscape Town is small and fast-growing town, in the<br>
+        "BetaWorld" Minecraft Server. It was found in wild, when EymenWinnerYT was<br>
+        caving, he got an idea, "Make a town", then he found town near the cave.<br>
+        <br>
+        Now town is getting popular and 1-2 people joins to the town eveyday.</p><br><br>
+        <font color="red"><h2>Town Screenshots:</h2></font>
         <h3 id="footer">CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 100% of code by EymenWinnerYT</h3>
     </body>
 </html>
