custom font added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
             padding: 0;
             }
 
+            @font-face {
+            font-family: 'CustomFont';
+            src: url('/assets/zai_Smith-CoronaGalaxieTypewriter.otf') format('otf'),
+            }
+
+
             #content {
             padding: 20px;
             }
@@ -25,6 +31,7 @@
             .merkez { text-align: center; }
             .banner { background-image: url('/assets/ltown.png'); }
             .beyaz { color: white; }
+            .sigtext { font-family: 'CustomFont', sans-serif; }
             .dev { font-size: 100px; }
             .buyuk { font-size: 65px; }
         </style>
@@ -42,6 +49,7 @@
         <h1>Eymen's</h1>
         <img src="/assets/oldmclogo.jpeg" width="450" height="225">
         <h1>               Website</h1><br><hr />
+        <h3 class="sigtext">Since 2023</h3>
         </div>
         <h2 class="buyuk"><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
         <p>You can find stuff about minecraft and old minecraft!<br>
