--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <head>
         <title>Eymen's Minecraft Website</title>
         <style>
-            body {
+           body {
             margin: 0;
             padding: 0;
-            }
+            font-family: 'CustomFont', sans-serif;
+        }
 
-            @font-face {
+        @font-face {
             font-family: 'CustomFont';
-            src: url('/assets/zai_Smith-CoronaGalaxieTypewriter.otf') format('otf'),
-            }
+            src: url('/assets/zai_Smith-CoronaGalaxieTypewriter.otf') format('opentype');
+            /* Add additional font formats if needed, like woff, woff2, etc. */
+        }
 
 
             #content {
@@ -39,30 +41,26 @@
     <body>
         <script src="/assets/counter.js"></script>
         <div class="banner">
-        <table border="2" class="merkez">
-            <tr>
-                <td><h2><a href="/">Home</a></h2></td>
-                <td><h2><a href="/downloads/">Downloads</a></h2></td>
-                <td><h2><a href="/games/">Games</a></h2></td>
-            </tr>
-        </table>
-        <h1>Eymen's</h1>
-        <img src="/assets/oldmclogo.jpeg" width="450" height="225">
-        <h1>               Website</h1><br><hr />
-        <h3 class="sigtext">Since 2023</h3>
+            <table border="2" class="merkez">
+                <tr>
+                    <td><h2><a href="/">Home</a></h2></td>
+                    <td><h2><a href="/downloads/">Downloads</a></h2></td>
+                    <td><h2><a href="/games/">Games</a></h2></td>
+                </tr>
+            </table>
+            <h1>Eymen's</h1>
+            <img src="/assets/oldmclogo.jpeg" width="450" height="225">
+            <h1>Website</h1><br><hr />
+            <h3 class="sigtext">Since 2023</h3>
         </div>
         <h2 class="buyuk"><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
-        <p>You can find stuff about minecraft and old minecraft!<br>
+        <p>You can find stuff about Minecraft and old Minecraft!<br>
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
         <a id="visitorCount"><h3></h3></a>
         <h1>About Landscape Town</h1>
-        <p>Landscape Town is small and fast-growing town, in the<br>
-        "BetaWorld" Minecraft Server. It was found in wild, when EymenWinnerYT was<br>
-        caving, he got an idea, "Make a town", then he found town near the cave.<br>
-        <br>
-        Now town is getting popular and 1-2 people joins to the town eveyday.</p><br><br>
+        <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server. It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town. Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
-        <h3 id="footer">CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 100% of code by EymenWinnerYT</h3>
+        <h3 id="footer">CopyRight ™ <font color="blue">Eymen's Website</font> <strong>|</strong> 100% of code by EymenWinnerYT</h3>
     </body>
 </html>
