--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             </table>
             <h1>Eymen's</h1>
             <img src="/assets/oldmclogo.jpeg" width="450" height="225">
-            <h1>Website</h1><br><hr />
-            <h3 class="sigtext">Since 2023</h3>
+            <h1>Website</h1><br><h3 class="sigtext">Since 2023</h3><hr />
         </div>
         <h2 class="buyuk"><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
         <p>You can find stuff about Minecraft and old Minecraft!<br>
