--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>You can find stuff about Minecraft and old Minecraft!<br>
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
-        <a id="visitorCount"><h3></h3></a>
+        <a id="visitorCount"><h3><strong>Loading</strong></h3></a>
         <h1>About Landscape Town</h1>
         <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server. It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town. Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
