--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2>Visitor counter:</h2>
         <h3><a id="visitorCount">Loading</a></h3>
         <h1>About Landscape Town</h1>
-        <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server. It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town. Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
+        <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
         <h3 id="footer">CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 100% of code by EymenWinnerYT</h3>
     </body>
