--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             table { margin: 0 auto; }
             .merkez { text-align: center; }
             .banner { background-image: url('/assets/ltown.png'); }
+            .flasher { background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/69/Color_Flash.gif') }
             .beyaz { color: white; }
             .sigtext { font-family: 'CustomFont', sans-serif; }
             .dev { font-size: 100px; }
@@ -55,7 +56,7 @@
         <p>You can find stuff about Minecraft and old Minecraft!<br>
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
-        <h3><a id="visitorCount">Loading</a></h3>
+        <h3 class="flasher"><a id="visitorCount">Loading</a></h3>
         <h1>About Landscape Town</h1>
         <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
