--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <h1>About Landscape Town</h1>
         <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
-        <h3 id="footer">CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 100% of code by EymenWinnerYT</h3>
+        <footer id="footer">
+            <hr />
+            <h3>CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 100% of code by EymenWinnerYT</h3>
+        </footer>
     </body>
 </html>
