--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         <p>You can find stuff about Minecraft and old Minecraft!<br>
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
-        <h3 class="flasher"><a id="visitorCount">Loading</a></h3>
+        <div class="flsher">
+        <h3><a id="visitorCount">Loading</a></h3>
+        </div>
         <h1>About Landscape Town</h1>
         <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
