--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p>You can find stuff about Minecraft and old Minecraft!<br>
         Also games and tech, hand-made or other.</p>
         <h2>Visitor counter:</h2>
-        <div class="flsher">
+        <div class="flasher">
         <h3><a id="visitorCount">Loading</a></h3>
         </div>
         <h1>About Landscape Town</h1>
