--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             .banner { background-image: url('/assets/ltown.png'); }
             .flasher { background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/69/Color_Flash.gif') }
             .beyaz { color: white; }
+            .sari { color: darkgoldenrod; }
             .sigtext { font-family: 'CustomFont', sans-serif; }
             .dev { font-size: 100px; }
             .buyuk { font-size: 65px; }
@@ -57,7 +58,7 @@
         Also games and tech, hand-made or other.</p>
         <div class="flasher">
         <h2>Visitor counter:</h2>
-        <h3><a id="visitorCount">Loading</a></h3>
+        <h3 class=""><a id="visitorCount">Loading</a></h3>
         </div>
         <h1>About Landscape Town</h1>
         <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
