--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         @font-face {
             font-family: 'CustomFont';
             src: url('/assets/zai_Smith-CoronaGalaxieTypewriter.otf') format('opentype');
-            /* Add additional font formats if needed, like woff, woff2, etc. */
         }
 
 
@@ -47,6 +46,7 @@
                     <td><h2><a href="/">Home</a></h2></td>
                     <td><h2><a href="/downloads/">Downloads</a></h2></td>
                     <td><h2><a href="/games/">Games</a></h2></td>
+                    <td><h2><a href="news.html">News</a></h2></td>
                 </tr>
             </table>
             <h1>Eymen's</h1>
@@ -63,9 +63,10 @@
         <h1>About Landscape Town</h1>
         <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
+        
         <footer id="footer">
             <hr />
-            <h3>CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 100% of code by EymenWinnerYT</h3>
+            <h3>CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 90% of code by EymenWinnerYT</h3>
         </footer>
     </body>
 </html>
