--- a/news.html
+++ b/news.html
@@ -13,6 +13,10 @@
                 <tr>
                     <td>News</td>
                 </tr>
+                <tr>
+                    <td>30.01.2024 16:49 GMT+3</td>
+                </tr>
+
             </table>
         </div>
     </body>
