--- a/news.html
+++ b/news.html
@@ -15,8 +15,8 @@
                 </tr>
                 <tr>
                     <td>30.01.2024 16:49 GMT+3</td>
+                    <td>Updated footer | now removed <strong>"%100 of code by EymenWinnerYT"</strong>, because i used ChatGPT for bit of javascript codes D:</td>
                 </tr>
-
             </table>
         </div>
     </body>
