--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
                 </tr>
                 <tr>
                     <td>30.01.2024 16:49 GMT+3</td>
-                    <td>Updated footer | now removed <strong>"%100 of code by EymenWinnerYT"</strong>, because i used ChatGPT for bit of javascript codes D:</td>
+                    <td>Updated footer | now removed <strong>"%100 of code by EymenWinnerYT"</strong>, because i used ChatGPT for bit of javascript codes D:. And added <strong>"%90 of code by EymenWinnerYT"</strong>.</td>
                 </tr>
             </table>
         </div>
