--- a/news.html
+++ b/news.html
@@ -4,6 +4,7 @@
         <title>NEWS - Eymen's Website</title>
     </head>
     <body>
+        <img src="/assets/Tonev-Windows-7-Windows-7-earth.ico"
         <h1>News</h1>
         <h3>Welcome to the news page! You can<br>
         find latest news here, about website and other stuff.</h3>
