--- a/news.html
+++ b/news.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>NEWS - Eymen's Website</title>
+        <style>
+            .soldan-uzak { margin-left: 30px; }
+        </style>
     </head>
     <body>
         <img src="/assets/Tonev-Windows-7-Windows-7-earth.ico"
