--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
         </style>
     </head>
     <body>
-        <img src="/assets/Tonev-Windows-7-Windows-7-earth.ico">
+        <img src="/assets/Tonev-Windows-7-Windows-7-earth.ico" width="64" height="64">
         <h1>News</h1>
         <h3>Welcome to the news page! You can<br>
         find latest news here, about website and other stuff.</h3>
