--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             .sigtext { font-family: 'CustomFont', sans-serif; }
             .dev { font-size: 100px; }
             .buyuk { font-size: 65px; }
+            .ayni-satirda-foto img {
+            display: inline-block;
+            margin-right: 10px; /* İsterseniz boşluk bırakabilirsiniz */
+            }
         </style>
     </head>
     <body>
@@ -60,10 +64,22 @@
         <h2>Visitor counter:</h2>
         <h3 class=""><a id="visitorCount">Loading</a></h3>
         </div>
+        <iframe src="https://www.youtube.com/embed/WbawrzORCaA" width="560" height="315" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
         <h1>About Landscape Town</h1>
         <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
-        
+        <div class="ayni-satirda-foto">
+            <img src="/assets/town-screenshots/2024-01-30_14.42.31.png">
+            <img src="/assets/town-screenshots/2024-01-30_14.42.38.png">
+        </div>
+        <div class="ayni-satirda-foto">
+            <img src="/assets/town-screenshots/2024-01-30_14.42.48.png">
+            <img src="/assets/town-screenshots/2024-01-30_14.42.50.png">
+        </div>
+        <div class="ayni-satirda-foto">
+            <img src="/assets/town-screenshots/2024-01-30_14.43.02.png">
+            <img src="/assets/town-screenshots/2024-01-30_14.43.26.png">
+        </div>
         <footer id="footer">
             <hr />
             <h3>CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 90% of code by EymenWinnerYT</h3>
