--- a/news.html
+++ b/news.html
@@ -2,9 +2,7 @@
 <html>
     <head>
         <title>NEWS - Eymen's Website</title>
-        <style>
-            .soldan-uzak { margin-left: 65px; }
-        </style>
+        <link rel="stylesheet" href="css1.css">
     </head>
     <body>
         <img src="/assets/Tonev-Windows-7-Windows-7-earth.ico" width="64" height="64">
