--- a/games/index.html
+++ b/games/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>ONLINE GAMES - Eymen's Website</title>
+        <link rel="stylesheet" href="css1.css">
     </head>
     <body>
         <h1>Games</h1>
