--- a/games/index.html
+++ b/games/index.html
@@ -9,6 +9,7 @@
         <p>You can find hand-made online games here!<br> It's <strong>100% free!</strong></p>
         <hr />
         <div class="soldan-uzak">
+        <table border="2">
             <tr>
                 <td>
                     <h4>Eymen's Online Car Driver</h4>
@@ -18,5 +19,6 @@
                     <a href="cardriver.html"><h5>ENTER</h5></a>
                 </td>
             </tr>
+        </table>    
         </div>
     </body>
