--- a/index.html
+++ b/index.html
@@ -2,45 +2,7 @@
 <html>
     <head>
         <title>Eymen's Minecraft Website</title>
-        <style>
-           body {
-            margin: 0;
-            padding: 0;
-        }
-
-        @font-face {
-            font-family: 'CustomFont';
-            src: url('/assets/zai_Smith-CoronaGalaxieTypewriter.otf') format('opentype');
-        }
-
-
-            #content {
-            padding: 20px;
-            }
-
-            #footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            text-align: center;
-            padding: 10px;
-            }
-            hr { width: 3; }
-            table { margin: 0 auto; }
-            .merkez { text-align: center; }
-            .banner { background-image: url('/assets/ltown.png'); }
-            .flasher { background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/69/Color_Flash.gif') }
-            .beyaz { color: white; }
-            .sari { color: darkgoldenrod; }
-            .sigtext { font-family: 'CustomFont', sans-serif; }
-            .dev { font-size: 100px; }
-            .buyuk { font-size: 65px; }
-            .ayni-satirda-foto img {
-            display: inline-block;
-            margin-right: 10px; /* İsterseniz boşluk bırakabilirsiniz */
-            }
-        </style>
+        <link rel="stylesheet" href="css1.css">
     </head>
     <body>
         <script src="/assets/counter.js"></script>
