--- a/games/index.html
+++ b/games/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>ONLINE GAMES - Eymen's Website</title>
-        <link rel="stylesheet" href="css1.css">
+        <link rel="stylesheet" href="/assets/css1.css">
     </head>
     <body>
         <h1>Games</h1>
@@ -12,11 +12,11 @@
         <table border="2">
             <tr>
                 <td>
-                    <h4>Eymen's Online Car Driver</h4>
+                    <font color="red"><h3>Eymen's Online Car Driver</h3></font>
                     <p>Category: Adventure<br> Programming Landguage: JavaScript <br> Release Date: 31.1.2024</p>
                 </td>
                 <td>
-                    <a href="cardriver.html"><h5>ENTER</h5></a>
+                    <a href="cardriver.html"><h4>ENTER</h4></a>
                 </td>
             </tr>
         </table>    
