--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>NEWS - Eymen's Website</title>
-        <link rel="stylesheet" href="css1.css">
+        <link rel="stylesheet" href="/assets/css1.css">
     </head>
     <body>
         <img src="/assets/Tonev-Windows-7-Windows-7-earth.ico" width="64" height="64">
