--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
         <div class="soldan-uzak">
             <table border="2">
                 <tr>
-                    <td>News</td>
+                    <td><font color="red"><h3>News</h3></font></td>
                 </tr>
                 <tr>
                     <td><strong>30.01.2024 16:49 GMT+3</strong></td>
