--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Eymen's Minecraft Website</title>
-        <link rel="stylesheet" href="css1.css">
+        <link rel="stylesheet" href="/assets/css1.css">
     </head>
     <body>
         <script src="/assets/counter.js"></script>
