--- a/games/cardriver.html
+++ b/games/cardriver.html
@@ -4,11 +4,15 @@
         <title>CAR DRIVER - GAMES - Eymen's Website</title>
         <style>
             .container { background-size: cover; }
-            .road { width: 400px; height: 100vh; background-color: black; margin: auto; position: relative; border-left: 7px dashed white; border-right: 7px dashed white;}
+            .road { width: 400px; height: 100vh; background-color: black; margin: auto; position: relative; border-left: 7px dashed white; border-right: 7px dashed white; }
+            .line { width: 10px; height: 100px;  }
+            .car { width: 50px; height:80px; background-color: black; position: absolute; bottom: 120px; background-image: url('/assets/green.png'); background-size: cover;  }
         </style>
         <body>
             <div class="container">
-                
+                <div class="road">
+
+                </div>
             </div>
         </body>
     </head>
