--- a/games/index.html
+++ b/games/index.html
@@ -12,7 +12,7 @@
               var currentColor = flashingText.style.color;
           
               // Toggle between red and blue colors
-              flashingText.style.color = (currentColor === 'red') ? 'blue' : 'red';
+              flashingText.style.color = (currentColor === 'green') ? 'blue' : 'red';
             }
           
             // Set interval to toggle color every 100 milliseconds (adjust as needed for faster blinking)
