--- a/games/index.html
+++ b/games/index.html
@@ -19,7 +19,7 @@
             setInterval(toggleColor, 100);
           </script>
         <h1>Games</h1>
-        <p>You can find hand-made online games here!<br> It's <strong>100% free!</strong></p>
+        <h3>You can find hand-made online games here!<br> It's <u>100% free!</u></h3>
         <hr />
         <div class="soldan-uzak">
         <table border="2">
