--- a/games/index.html
+++ b/games/index.html
@@ -27,7 +27,7 @@
                 <td>
                     <font color="red"><h3>Eymen's Online Car Driver</h3></font>
                     <p>Category: Adventure<br> Programming Landguage: JavaScript <br> Release Date: 31.1.2024</p>
-                    <h4 id="flashingText" class="flashing">ONLINE</p>
+                    <h4 id="flashingText" class="yesil">ONLINE</p>
                 </td>
                 <td>
                     <a href="cardriver.html"><h4>ENTER</h4></a>
