--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
     <body>
         <script src="/assets/counter.js"></script>
         <div class="banner">
-            <table border="2" class="merkez">
-                <tr>
-                    <td><h2><a href="/">Home</a></h2></td>
-                    <td><h2><a href="/downloads/">Downloads</a></h2></td>
-                    <td><h2><a href="/games/">Games</a></h2></td>
-                    <td><h2><a href="news.html">News</a></h2></td>
-                </tr>
-            </table>
+            <iframe border="0"src="/navbar.html"></iframe>
             <h1>Eymen's</h1>
             <img src="/assets/oldmclogo.jpeg" width="450" height="225">
             <h1>Website</h1><br><h3 class="sigtext">Since 2023</h3><hr />
