--- a/navbar.html
+++ b/navbar.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/assets/css1.css">
     </head>
     <body>
-    <table border="2" class="merkez">    
+    <table border="2">    
     <tr>
         <td><h2><a href="/">Home</a></h2></td>
         <td><h2><a href="/downloads/">Downloads</a></h2></td>
