--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <script src="/assets/counter.js"></script>
         <div class="banner">
-            <iframe border="0" src="/navbar.html"></iframe>
+            <iframe border="0" src="/navbar.html" id="footer-banner"></iframe>
             <h1>Eymen's</h1>
             <img src="/assets/oldmclogo.jpeg" width="450" height="225">
             <h1>Website</h1><br><h3 class="sigtext">Since 2023</h3><hr />
@@ -23,19 +23,7 @@
         <h1>About Landscape Town</h1>
         <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
         <font color="red"><h2>Town Screenshots:</h2></font>
-        <div class="ayni-satirda-foto">
-            <img src="/assets/town-screenshots/2024-01-30_14.42.31.png">
-            <img src="/assets/town-screenshots/2024-01-30_14.42.38.png">
-        </div>
-        <div class="ayni-satirda-foto">
-            <img src="/assets/town-screenshots/2024-01-30_14.42.48.png">
-            <img src="/assets/town-screenshots/2024-01-30_14.42.50.png">
-        </div>
-        <div class="ayni-satirda-foto">
-            <img src="/assets/town-screenshots/2024-01-30_14.43.02.png">
-            <img src="/assets/town-screenshots/2024-01-30_14.43.26.png">
-        </div>
-        <footer id="footer">
+        <footer id="footer-banner">
             <hr />
             <h3>CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 90% of code by EymenWinnerYT</h3>
         </footer>
