--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Countdown Timer</title>
 </head>
 <body>
-<h3>Welcome to eymenwinneryt.github.io!</h3>
+<h3>Welcome to <font color="blue">eymenwinneryt.github.io</font>!</h3>
 <h3>You will be redirect in <a id="countdown"></a> seconds!</h3>
 
 <br><br>
