--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -1,31 +1,10 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Eymen's Minecraft Website</title>
-        <link rel="stylesheet" href="/assets/css1.css">
-    </head>
-    <body>
-        <script src="/assets/counter.js"></script>
-        <div class="banner">
-            <iframe border="0" src="/navbar.html" id="footer-banner"></iframe>
-            <h1>Eymen's</h1>
-            <img src="/assets/oldmclogo.jpeg" width="450" height="225">
-            <h1>Website</h1><br><h3 class="sigtext">Since 2023</h3><hr />
-        </div>
-        <h2 class="buyuk"><marquee direction="left">Welcome to the Eymen's Epic Minecraft Website!</marquee></h2>
-        <p>You can find stuff about Minecraft and old Minecraft!<br>
-        Also games and tech, hand-made or other.</p>
-        <div class="flasher">
-        <h2>Visitor counter:</h2>
-        <h3 class=""><a id="visitorCount">Loading</a></h3>
-        </div>
-        <iframe src="https://www.youtube.com/embed/WbawrzORCaA" width="560" height="315" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
-        <h1>About Landscape Town</h1>
-        <p>Landscape Town is a small and fast-growing town in the "BetaWorld" Minecraft Server.<br> It was founded in the wild when EymenWinnerYT was caving, and he got the idea to make a town.<br> Now the town is getting popular, with 1-2 people joining every day.</p><br><br>
-        <font color="red"><h2>Town Screenshots:</h2></font>
-        <footer id="footer-banner">
-            <hr />
-            <h3>CopyRight &trade; <font color="blue">Eymen's Website</font> <strong>|</strong> 90% of code by EymenWinnerYT</h3>
-        </footer>
-    </body>
-</html>
+<!DOCTYPE html><html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/assets/css1.css">
+<title>Eymen's Minecraft Website 1.0</title>
+</head>
+<body>
+
+</body>
