--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -6,5 +6,9 @@
 <title>Eymen's Minecraft Website 1.0</title>
 </head>
 <body>
+<table border="2"><tr><td>
+<div style="display: inline-block;"></div>
+</td></tr><tr><td>
 
+</td></tr></table>
 </body>
