--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -6,6 +6,13 @@
 <title>Eymen's Minecraft Website 1.0</title>
 </head>
 <body>
+<audio id="audioPlayer" src="/assets/town.mp3" autoplay></audio>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+  var audio = document.getElementById("audioPlayer");
+  audio.play();
+});
+</script>    
 <table border="2"><tr><td>
 <div style="display: inline-block;"></div>
 </td></tr><tr><td>
