--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -15,7 +15,7 @@
 </script>    
 <table border="2"><tr><td>
 <div style="display: inline-block;"></div>
-</td></tr><tr><td>
-
+</td></tr><tr style="background-color: red;"><td>
+<noscript></noscript>
 </td></tr></table>
 </body>
