--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -14,7 +14,7 @@ window.addEventListener('DOMContentLoaded', (event) => {
 </script>    
 <table border="2"><tr><td>
 <div style="display: inline-block;"></div>
-</td></tr><tr style="background-color: red;"><td>
-<noscript></noscript>
+</td></tr><tr><td>
+<noscript><div style="background-color: red;"></noscript>
 </td></tr></table>
 </body>
