--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -17,6 +17,6 @@ window.addEventListener("DOMContentLoaded", event => {
 <table border="2"><tr><td>
 <div style="display: inline-block;"></div>
 </td></tr><tr><td>
-<noscript><div style="background-color: red;"></noscript>
+<noscript><div style="background-color: red;"></div></noscript>
 </td></tr></table>
 </body>
