--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/assets/css1.css">
-<audio src="/assets/town.mp3"></audio>
+<source preload="none" autoplay src="/assets/town.mp3" type="audio/mp3">
 <title>Eymen's Minecraft Website 1.0</title>
 </head>
 <body>
