--- a/index.html
+++ b/index.html
@@ -3,14 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script>
-  var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-  if (isMobile) {
-      window.location.href = "/v1.0Mobile/";
-  } else {
-      window.location.href = "/v1.0/";
-  }
-</script>
+<meta http-equiv="refresh" content="0; URL='/v1.0'" />
 <title>Redirecting..</title>
 </head>
 <body>
