--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -17,7 +17,7 @@ window.addEventListener("DOMContentLoaded", event => {
 });
 </script>    
 <table border="2"><tr><td>
-<div style="display: inline-block;"><h1>Eymen's</h1><img src="/assets/oldmclogo.jpeg"><h1>Website</h1></div><br><font color="red"><h3>By: EymenWinnerYT</h3><h3>Version: 1.0</h3></font>
+<div style="display: inline-block;"><h1>Eymen's</h1></div><div style="display: inline-block;"><img src="/assets/oldmclogo.jpeg"></div><div style="display: inline-block;"><h1>Website</h1></div><br><font color="red"><h3>By: EymenWinnerYT</h3><h3>Version: 1.0</h3></font>
 </td></tr><tr><td>
 <noscript><div style="background-color: red;"><marquee direction="left"><h2>PLEASE ENABLE JAVASCRPIPT FOR THE WEBSITE!! Website using JavaScript for section, download system and more. You can enable javasript from site settings. If your browser does not support Javascript, you can check out <a href="/v1.0Lite/">lite version</a>.</h2></marquee></div></noscript>
 </td></tr></table>
