--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -3,24 +3,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/assets/css1.css">
-<audio preload="none" autoplay>
-    <source src="/assets/town.mp3" type="audio/mp3">
-  </audio>
 <title>Eymen's Minecraft Website 1.0</title>
 </head>
 <body>
 <script>
-window.addEventListener("DOMContentLoaded", event => {
-  const audio = document.querySelector("audio");
-  audio.volume = 0.2;
-  audio.play();
-});
-</script><div style="background-color: powderblue;">  
-<table border="2"><tr><td>
+var audio = new Audio('sesdosyasi.mp3');
+audio.play();
+</script>
+<table border="2"><div style="background-color: powderblue;"><tr><td>
 <div style="display: inline-block;"><h1>Eymen's</h1></div><div style="display: inline-block;"><img src="/assets/oldmclogo.jpeg"></div><div style="display: inline-block;"><h1>Website</h1></div><br><font color="red"><h3>By: EymenWinnerYT</h3><h3>Version: 1.0</h3></font>
 </td></tr><tr><td>
 <noscript><div style="background-color: red;"><marquee direction="left"><h2>PLEASE ENABLE JAVASCRPIPT FOR THE WEBSITE!! Website using JavaScript for section, download system and more. You can enable javasript from site settings. If your browser does not support Javascript, you can check out <a href="/v1.0Lite/">lite version</a>.</h2></marquee></div></noscript>
 </td></tr><tr><td>
     
-</td></tr></table></div>
-</body>
+</td></tr></div></table></body></html>
