--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>
-var audio = new Audio('sesdosyasi.mp3');
+var audio = new Audio('/assets/town.mp3');
 audio.play();
 </script>
 <table border="2"><div style="background-color: powderblue;"><tr><td>
@@ -16,4 +16,6 @@ audio.play();
 <noscript><div style="background-color: red;"><marquee direction="left"><h2>PLEASE ENABLE JAVASCRPIPT FOR THE WEBSITE!! Website using JavaScript for section, download system and more. You can enable javasript from site settings. If your browser does not support Javascript, you can check out <a href="/v1.0Lite/">lite version</a>.</h2></marquee></div></noscript>
 </td></tr><tr><td>
     
+</td></tr><tr><td>
+  
 </td></tr></div></table></body></html>
