--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html>
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/assets/css1.css">
 <title>Eymen's Minecraft Website 1.0</title>
