--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -21,5 +21,5 @@ audio.play();
 </td></tr><tr style="background-color: powderblue"><td>
     
 </td></tr><tr style="background-color: powderblue"><td>
-  
+<br><br><font color="red"><h2><u>Introduction</u></h2></font><h3>Welcome to Eymen's Minecraft Website! You can find tech stuff,<br>downloads, minecraft things, and blog stuff etc..!</h3><br><br>  
 </td></tr></table></body></html>
