--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -21,5 +21,5 @@ audio.play();
 </td></tr><tr style="background-color: powderblue"><td>
     
 </td></tr><tr style="background-color: powderblue"><td>
-<br><br><font color="red"><h1><u>Introduction</u></h1></font><h3>Welcome to Eymen's Minecraft Website! You can find tech stuff,<br>downloads, minecraft things, and blog stuff etc..!</h3><br><br>  
+<br><br><font color="red"><h1><u>Introduction</u></h1></font><h3>Welcome to Eymen's Minecraft Website! You can find tech stuff,<br>downloads, minecraft things, and blog stuff etc..!</h3><br><br><font color="red"><h1><u>BetaWorld Minecraft Server</u></h1></font><br><br><h3>You can confuse it as "Minecraft Beta 1.7.3 World".<br>But it is not! BetaWorld is Minecraft Beta 1.7.3<br>server, it runs on bukkit server software and it supports<br>Towny, McMMO (RPG System), ChestShop, /SHOP Plugin and more!<br><br><font color="purple"><h2>Server Staff Members:</h2></font><br><br></h3>  
 </td></tr></table></body></html>
