--- a/v1.0/navbar.html
+++ b/v1.0/navbar.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html><html>
 <head><title>Navbar</title></head><body><h4>
-(<a href="/">Home</a> | <a href="download.html">Downloads</a> | <a href="contact.html">Contact</a> | <a href="about.html">About</a>)   
+(<a href="/" target="_blank">Home</a> |
+<a href="download.html" target="_blank">Downloads</a> |
+<a href="contact.html" target="_blank">Contact</a> |
+<a href="about.html" target="_blank">About</a>
+)
 </h4></body></html>
