--- a/v1.0/download.html
+++ b/v1.0/download.html
@@ -15,7 +15,10 @@
 </td></tr><tr style="background-color: powderblue"><td>
 <noscript><div style="background-color: red;"><marquee direction="left"><h2>PLEASE ENABLE JAVASCRPIPT FOR THE WEBSITE!! Website using JavaScript for section, download system and more. You can enable javasript from site settings. If your browser does not support Javascript, you can check out <a href="/v1.0Lite/">lite version</a>.</h2></marquee></div></noscript>
 </td></tr><tr style="background-color: powderblue"><td>
-<iframe src="navbar.html"></iframe>    
+    <a href="/" target="_blank">Home</a> |
+    <a href="download.html" target="_blank">Downloads</a> |
+    <a href="contact.html" target="_blank">Contact</a> |
+    <a href="about.html" target="_blank">About</a>        
 </td></tr><tr style="background-color: powderblue"><td>"
 <br><br><font color="red"><h1><u>Downloads</u></h1></font>
 </td></tr></table></body></html>
