--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -15,7 +15,10 @@
 </td></tr><tr style="background-color: powderblue"><td>
 <noscript><div style="background-color: red;"><marquee direction="left"><h2>PLEASE ENABLE JAVASCRPIPT FOR THE WEBSITE!! Website using JavaScript for section, download system and more. You can enable javasript from site settings. If your browser does not support Javascript, you can check out <a href="/v1.0Lite/">lite version</a>.</h2></marquee></div></noscript>
 </td></tr><tr style="background-color: powderblue"><td>
-<iframe src="navbar.html"></iframe>    
+    <a href="/" target="_blank">Home</a> |
+    <a href="download.html" target="_blank">Downloads</a> |
+    <a href="contact.html" target="_blank">Contact</a> |
+    <a href="about.html" target="_blank">About</a>    
 </td></tr><tr style="background-color: powderblue"><td>"
 <br><br><font color="red"><h1>Projects:</h1><h3><span color="green">[App]</span> JBS</h3></font><font color="red"><h1><u>Introduction</u></h1></font><h3>Welcome to Eymen's Minecraft Website! You can find tech stuff,<br>downloads, minecraft things, and blog stuff etc..!</h3><br><font color="red"><h1><u>BetaWorld Minecraft Server</u></h1></font><br><br><h3>You can confuse it as "Minecraft Beta 1.7.3 World".<br>But it is not! BetaWorld is Minecraft Beta 1.7.3<br>server, it runs on bukkit server software and it supports<br>Towny, McMMO (RPG System), ChestShop, /SHOP Plugin and more!</h3><br><font color="purple"><h2>Server Staff Members:</h2></font><br><font color="red"><h3>Owner: JuliusVan</h3></font><font color="yellow"><h3>Admin: admin</h3><h3>Discord Admin: bluewidow</h3></font><font color="green"><h3>Moderator: _AppleMark</h3></font></h3><br><br><font color="red"><h1><u>Our Minecraft Server</u></h1></font><br><h3>Welcome to the EymenWinnerYT's Server! Wanna live a nostaljia? You can<br>join out alpha server! It is vanilla temporarily, but plugins coming soon :)<br><br>IP: In <a href="mailto:eymenwinner11@gmail.com">E-Mail</a><br>Version: Alpha 1.2.6</h3>
 </td></tr></table></body></html>
