--- a/v1.0/download.html
+++ b/v1.0/download.html
@@ -21,4 +21,6 @@
     <a href="about.html" target="_blank">About</a>        
 </td></tr><tr style="background-color: powderblue"><td>"
 <br><br><font color="red"><h1><u>Downloads</u></h1></font>
+</td></tr><tr><td colspan="4">
+<IFRAME SRC="DLINDEX.HTML"></IFRAME>    
 </td></tr></table></body></html>
