--- a/v1.0/DLINDEX.HTML
+++ b/v1.0/DLINDEX.HTML
@@ -1,4 +1,14 @@
-<!DOCTYPE html><html>
-<head><title>DLINDEX</title><style>{ </style></head><BODY>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>DLINDEX</title>
+    <style>
+        body {
+            background-color: powderblue;
+        }
+    </style>
+</head>
+<body>
 
-</BODY></html>   
+</body>
+</html>
