--- a/v1.0/DLINDEX.HTML
+++ b/v1.0/DLINDEX.HTML
@@ -9,6 +9,8 @@
     </style>
 </head>
 <body>
-
+<br><br><a href="/jbs/"><img src="/assets/jbsico.ico"></a><h2>JBS</h2><br>
+<h3>A Screen Recorder</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><footer><span color="red"></span></footer>
 </body>
 </html>
