--- a/v1.0/DLINDEX.HTML
+++ b/v1.0/DLINDEX.HTML
@@ -11,6 +11,6 @@
 <body>
 <br><br><a href="/jbs/"><img src="/assets/jbsico.ico"></a><h2>JBS</h2><br>
 <h3>A Screen Recorder</h3>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><footer><span color="red"></span></footer>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><footer><p style="color:blue;">New downloads coming soon inshallah :D</p></span></footer>
 </body>
 </html>
