--- a/v1.0/download.html
+++ b/v1.0/download.html
@@ -22,5 +22,5 @@
 </td></tr><tr style="background-color: powderblue"><td>"
 <br><br><font color="red"><h1><u>Downloads</u></h1></font>
 </td></tr><tr><td colspan="1">
-<IFRAME SRC="DLINDEX.HTML" WIDTH="800"></IFRAME>    
+<IFRAME SRC="DLINDEX.HTML" HEIGHT="800" WIDTH="600"></IFRAME>    
 </td></tr></table></body></html>
