--- a/v1.0/download.html
+++ b/v1.0/download.html
@@ -20,7 +20,5 @@
     <a href="contact.html" target="_blank">Contact</a> |
     <a href="about.html" target="_blank">About</a>        
 </td></tr><tr style="background-color: powderblue"><td>"
-<br><br><font color="red"><h1><u>Downloads</u></h1></font>
-</td></tr><tr><td>
-<IFRAME SRC="DLINDEX.HTML" HEIGHT="1200" WIDTH="800"></IFRAME>    
+<br><br><font color="red"><h1><u>Downloads</u></h1></font><br><br><IFRAME SRC="DLINDEX.HTML" HEIGHT="1200" WIDTH="800"></IFRAME>    
 </td></tr></table></body></html>
