--- a/v1.0/DLINDEX.HTML
+++ b/v1.0/DLINDEX.HTML
@@ -9,8 +9,8 @@
     </style>
 </head>
 <body>
-<br><br><a href="/jbs/"><img src="/assets/jbsico.ico"></a><h2>JBS</h2><br>
-<h3>A Screen Recorder</h3>
+<br><br><div style="display: inline-block;"><a href="/jbs/"><img src="/assets/jbsico.ico"></a></div><div style="display: inline-block;"><h2>JBS</h2></div><br>
+<h3>A Screen Recorder for Lite Windows Versions</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><footer><p style="color:blue;">New downloads coming soon inshallah :D</p></span></footer>
 </body>
 </html>
